[gd_scene load_steps=7 format=2]

[ext_resource path="res://elements/ModuleDragger.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/JackIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/outputs/antenna_output.svg" type="Texture" id=3]
[ext_resource path="res://elements/outputs/AntennaOut.gd" type="Script" id=4]
[ext_resource path="res://elements/switch/SwitchLED.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 213, 173 )

[node name="AntennaOut" type="Node2D"]
script = ExtResource( 4 )

[node name="sequencer" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ModuleDragger" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleDragger"]
position = Vector2( 204.381, 175 )
shape = SubResource( 1 )

[node name="JackIn" parent="." instance=ExtResource( 2 )]
position = Vector2( 2.00028, 105 )

[node name="JackIn2" parent="." instance=ExtResource( 2 )]
position = Vector2( 2, 175 )

[node name="JackIn3" parent="." instance=ExtResource( 2 )]
position = Vector2( 2, 245 )

[node name="JackIn4" parent="." instance=ExtResource( 2 )]
position = Vector2( 2, 315 )

[node name="LED1" parent="." instance=ExtResource( 5 )]
position = Vector2( 315, 105 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )

[node name="LED5" parent="." instance=ExtResource( 5 )]
position = Vector2( 385, 105 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )

[node name="LED6" parent="." instance=ExtResource( 5 )]
position = Vector2( 385, 175 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )

[node name="LED7" parent="." instance=ExtResource( 5 )]
position = Vector2( 385, 245 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )

[node name="LED8" parent="." instance=ExtResource( 5 )]
position = Vector2( 385, 315 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )

[node name="LED2" parent="." instance=ExtResource( 5 )]
position = Vector2( 315, 175 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )

[node name="LED3" parent="." instance=ExtResource( 5 )]
position = Vector2( 315, 245 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )

[node name="LED4" parent="." instance=ExtResource( 5 )]
position = Vector2( 315, 315 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )
